# capdag-py

./: .gitattributes  .gitignore  README.md  TEST_CATALOG.md  catalog_tests.py  move-py.sh  pyproject.toml  pyproject.toml.wstemplate  version.txt
src/capdag/: __init__.py
src/capdag/bifaci/: __init__.py  bundled_cartridge_hashes.py  bundled_provider_hashes.py  cartridge_discovery.py  cartridge_json.py  cartridge_repo.py  cartridge_runtime.py  cartridge_slug.py  credit.py  frame.py  host_runtime.py  in_process_host.py  io.py  manifest.py  plugin_runtime.py  protocol_trace.py  relay.py  relay_switch.py  request_state.py  router.py  stats.py
src/capdag/cap/: caller.py  definition.py  registry.py  response.py  schema_validation.py  validation.py
src/capdag/fabric/: __init__.py  registry.py
src/capdag/input_resolver/: __init__.py  adapter.py  os_filter.py  path_resolver.py  resolver.py  types.py  value_adapter.py  value_adapter_registry.py
src/capdag/machine/: __init__.py  error.py  graph.py  machine.pest  parser.py  realize.py  resolve.py  serializer.py
src/capdag/media/: profile.py  registry.py  spec.py
src/capdag/orchestrator/: __init__.py  cbor_util.py  executor.py  parser.py  plan_converter.py  types.py  validation.py
src/capdag/planner/: __init__.py  argument_binding.py  cardinality.py  collection_input.py  error.py  executor.py  (+4 more)
tests/: test_caller.py  test_cap.py  test_cap_matrix.py  test_cap_urn.py  test_cardinality.py  test_cartridge_discovery.py  test_cartridge_host.py  test_cartridge_host_runtime.py  test_cartridge_relay.py  test_cartridge_repo.py  test_cartridge_runtime.py  test_cbor_frame.py  test_cbor_integration.py  test_cbor_io.py  test_cbor_util.py  test_collection_input.py  test_credit.py  test_executor.py  test_fabric_alias.py  test_in_process_host.py  test_input_resolver.py  test_live_cap_fab.py  test_live_cap_graph.py  test_machine.py  test_manifest.py  test_media_def.py  test_media_profile.py  test_media_spec.py  test_media_urn.py  test_orchestrator_parser.py  test_orchestrator_plan_converter.py  test_orchestrator_types.py  test_plan.py  test_plan_builder.py  test_planner_argument_binding.py  test_plugin_host.py  test_plugin_host_runtime.py  test_plugin_relay.py  test_plugin_runtime.py  test_protocol_trace.py  (+10 more)
(+12 files in other folders)
