[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capdag"
version = "0.149.1435"
description = "Core cap URN and definition system for MACHFAB cartridges"
authors = [{name = "https://github.com/machinefabric"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "tagged-urn>=0.16.68",
    "cbor2>=5.4.0",
	"python-pest">=0.1.1,
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
